Wed Apr 29 01:43:30 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/text_tool.c: don't die on corrupted fonts. Give some
	error messages instead.

Tue Apr 28 23:17:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/gradient.c: enable adjustment of the gradient list box
	for scrolling

Wed Apr 29 00:56:19 1998  Tim Janik  <timj@gtk.org>

	* app/text_tool.c (text_create_dialog): enable adjustment of the
	scrolled window to keep the focused font visible.

Tue Apr 28 15:09:02 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/CEL/CEL.c
	* plug-ins/psd/psd.c: portability fix for SunOS 4

Mon Apr 27 20:43:14 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/animationplay/animationplay.c
	* plug-ins/CEL/CEL.c
	* plug-ins/psd/psd.c
	* plug-ins/xd/xd.c: applied gimp-joke-980427-0, warning cleanups

	* app/temp_buf.c: applied gimp-entity-980427-0, temp_buf swap
	speedups and more robust tempfile handling

Mon Apr 27 20:57:26 1998 EDT Matthew Wilson <msw@gimp.org>

	* app/curves: Initialize data that is referenced in event handlers
	in the curves_new_dialog function.  Be on the look out for this
	kind of stuff in other dialogs.
	
Tue Apr 28 00:16:31 1998  Tim Janik  <timj@gtk.org>

	* app/channels_dialog.c (channels_dialog_create): adjust the scrolled
	window to always show the currently focused channel item.

	* app/layers_dialog.c (layers_dialog_create): adjust the scrolled
	window to always show the currently focused layer item.

Mon Apr 27 23:29:10 MEST 1998 Sven Neumann <sven@gimp.org>

	* updated despeckle and sharpen plug-ins

Mon Apr 27 18:09:01 MEST 1998 Sven Neumann <sven@gimp.org>

	* updated bmp plug-in

Sun Apr 26 16:31:06 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.28 release

Sun Apr 26 16:17:46 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/procedural_db.c
	* app/text_tool.c: applied mem leak patch from Mattias Gronlund

	* plug-ins/tiff/tiff.c: fix for indexed save from Dan Mitchell

Sun Apr 26 15:11:06 PDT 1998 Manish Singh <yosh@gimp.org>
